# webcrawlercpp

./: .gitignore  CMakeLists.txt  README.md
src/QT/: MainWindow.cpp  MainWindow.h
src/impl/: HtmlParser.cpp  HttpClient.cpp  OutputGen.cpp  UrlNormalizer.cpp  WebCrawler.cpp
src/interfaces/: HtmlParser.h  HttpClient.h  OutputGen.h  UrlNormalizer.h  WebCrawler.h
src/starter/: main.cpp
